--- a/index.html
+++ b/index.html
@@ -1,55 +1,64 @@
-<div class="content">
-    <div class="left">
-         <div class="about-container">
-              <h3 class="title">About</h3>
-              <p class="text">~ Aspiring Network & AI Developer ~</p>
-              <p class="text">~ Computer Network | AI | Web Dev ~</p>
-              <p class="text">• Python | JavaScript | AI/ML •</p>
-         </div>
-         <div class="icons-container">
-              <a href="https://github.com/unknowncriteria" class="icon">
-                   <i class="fab fa-github"></i>
-              </a>
-              <a href="https://telegram.dog/noobrahul" class="icon">
-                   <i class="fab fa-telegram"></i>
-              </a>
-         </div>
-         <div class="buttons-wrap">
-              <div class="follow-wrap">
-                   <a href="https://github.com/unknowncriteria" class="follow">Follow</a>
-              </div>
-              <div class="share-wrap">
-                   <a href="https://telegram.dog/noobrahul" class="share">Contact</a>
-              </div>
-         </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UnknownCriteria</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body>
+
+<div class="container">
+    <div class="content">
+        <div class="left">
+            <div class="about-container">
+                <h3 class="title">About</h3>
+                <p class="text">~ Aspiring Network & AI Developer ~</p>
+                <p class="text">~ Computer Network | AI | Web Dev ~</p>
+                <p class="text">• Python | JavaScript | AI/ML •</p>
+            </div>
+            <div class="icons-container">
+                <a href="https://github.com/unknowncriteria" class="icon">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://telegram.dog/noobrahul" class="icon">
+                    <i class="fab fa-telegram"></i>
+                </a>
+            </div>
+            <div class="buttons-wrap">
+                <div class="follow-wrap">
+                    <a href="https://github.com/unknowncriteria" class="follow">Follow</a>
+                </div>
+                <div class="share-wrap">
+                    <a href="https://telegram.dog/noobrahul" class="share">Contact</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-</div>
-</div>
-</div><script>
+
+<!-- Security script to prevent Inspect Element -->
+<script>
     document.onkeydown = function (e) {
-        if (event.keyCode == 123) {
-            return false;
-        }
-        if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-            return false;
-        }
-        if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-            return false;
-        }
-        if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-            return false;
-        }
-        if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-            return false;
-        }
-    }
-</script><script src="src/app.js"></script><script
+        if (event.keyCode == 123) { return false; }
+        if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) { return false; }
+        if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) { return false; }
+        if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) { return false; }
+        if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) { return false; }
+    };
+</script>
+
+<!-- External Scripts -->
+<script src="assets/js/app.js"></script>
+<script 
     form_worker_url="https://unknowncriteria.contactform-d0b.workers.dev/"
     src="/contactform/contact-form.js"
     error_text="Something went wrong, try again!"
     success_text="Message sent successfully!"
     disable_waittime="true"
     id="contactform">
-</script></body>
+</script>
+
+</body>
 </html>
