--- a/index.html
+++ b/index.html
@@ -1,137 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-     <title>Eren (@WH0907)</title>
+     <title>Rahul Kumar (@THE_NOOB_RAHUL)</title>
      <link rel="stylesheet" href="src/style.css">
      <link rel="icon" href="https://vectorified.com/images/attack-on-titan-icon-31.png" type="image/x-icon">
      <link rel='stylesheet' href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
      <script src="https://kit.fontawesome.com/c9a9fd0877.js" crossorigin="anonymous"></script>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Eren's Website | One of the first web development projects by Eren.">
-     <meta itemprop="name" content="Eren's Website">
-     <meta itemprop="description" content="Eren's Website | One of the first web development projects by Eren.">
-     <meta itemprop="image" content="https://i.ibb.co/9tFYscQ/ErenPFP.webp">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <meta content="Eren's Website" property="og:site_name">
+     <meta name="description" content="Rahul Kumar's Website | Web Development & AI-powered Networking.">
+     <meta property="og:site_name" content="Rahul Kumar's Website">
      <meta property="og:type" content="website">
-     <meta content="https://linuxguy312.github.io/" property="og:url">
-     <meta content="Eren (@WH0907)" property="og:title">
-     <meta content="https://i.ibb.co/9tFYscQ/ErenPFP.webp" property="og:image">
-     <meta content="Eren's Website | One of the first web development projects by Eren." property="og:description">
-</head>
-
-<body id="body" class="dark" oncontextmenu="return false">
-     <div class="loader" id="loader">
-          <h1 data-value="LinuxGuy312" id="loader-text">Click me</h1>
-     </div>
-     <div id="particles-js"></div>
-     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-     <div class="wrapper">
-          <div class="toggle">
-               <input class="toggle-input" type="checkbox" />
-               <div class="toggle-bg"></div>
-               <div class="toggle-switch">
-                    <div class="toggle-switch-figure"></div>
-                    <div class="toggle-switch-figureAlt"></div>
-               </div>
-          </div>
-     </div>
-
-     <div class="modal">
-          <img src="https://i.ibb.co/Hnvn01C/WH.webp" alt="Eren">
-          <div class="close"></div>
-     </div>
-
+     <meta property="og:image" content="https://envs.sh/FFh.jpg">
+</head><body id="body" class="dark" oncontextmenu="return false">
      <div id="container" class="container">
           <input type="checkbox" name="" id="check">
           <div class="card">
-               <div class="sidebar" id="sidebar">
-                    <a class="active" href="https://github.com/LinuxGuy312" target="_blank">Github</a>
-                    <a class="active" href="https://WH0907.t.me" target="_blank">Telegram</a>
-                    <a class="active" href="https://instagram.com/hamayoshikamado" target="_blank">Instagram</a>
-                    <a class="active" href="https://yoshitsubot.t.me?start=web" target="_blank">My TG Bot</a>
-               </div>
                <div class="header">
-                    <label for="check" class="checkbtn" id="chkbtn">
-                         <div class="hamburger-menu">
-                              <div class="center"></div>
-                         </div>
-                    </label>
-                    <a href="mailto:linuxguy312@segfault.net" class="mail">
-                         <i class="far fa-envelope"></i>
-                    </a>
                     <div class="main">
                          <div class="image">
-                              <div class="hover">
-                                   <i class="fas fa-camera fa-2x"></i>
-                              </div>
+                              <img src="https://envs.sh/FFh.jpg" alt="Rahul Kumar">
                          </div>
-                         <h3 class="name">𝔼𝕣𝕖𝕟</h3>
-                         <h3 class="sub-name">@WH0907</h3>
+                         <h3 class="name">𝕿𝕳𝕰 𝕹𝕺𝕺𝕭 𝕽𝕬𝕳𝖀𝕷</h3>
+                         <h3 class="sub-name">@THE_NOOB_RAHUL</h3>
                     </div>
                </div>
-
                <div class="content">
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">~ Telegram Bot Dev ~ <a class='text' style="text-decoration: none" href="https://YoshitsuBot.t.me?start=web">@YoshitsuBot</a> ~</p>
-                              <p class="text">~ Android Dev ~ Kernel Dev ~</p>
-                              <p class="text">• Python | C++ | JavaScript •</p>
+                              <p class="text">Founder of <b>Intangible Network Official</b></p>
+                              <p class="text">Web & Bot Developer</p>
+                              <p class="text">Passionate about <b>AI-powered networking & smart connection technologies</b></p>
+                              <p class="text">• HTML | CSS | JavaScript | Python | AI/ML •</p>
                          </div>
                          <div class="icons-container">
-                              <a href="https://github.com/LinuxGuy312" class="icon">
-                                   <i class="fab fa-github"></i>
+                              <a href="mailto:legendcoder90@gmail.com" class="icon">
+                                   <i class="far fa-envelope"></i>
                               </a>
-                              <a href="https://telegram.dog/WH0907" class="icon">
-                                   <i class="fab fa-telegram"></i>
-                              </a>
-                              <a href="https://instagram.com/hamayoshikamado" class="icon">
+                              <a href="https://instagram.com/the_noob_rahul" class="icon">
                                    <i class="fab fa-instagram"></i>
                               </a>
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
-                                   <a href="https://github.com/LinuxGuy312" class="follow">Follow</a>
+                                   <a href="mailto:legendcoder90@gmail.com" class="follow">Email Me</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog/WH0907" class="share">Contact</a>
+                                   <a href="https://instagram.com/the_noob_rahul" class="share">Follow on Instagram</a>
                               </div>
                          </div>
                     </div>
                </div>
           </div>
      </div>
-     </div>
-
-     <script>
-          document.onkeydown = function (e) {
-               if (event.keyCode == 123) {
-                    return false;
-               }
-               if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-                    return false;
-               }
-               if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-                    return false;
-               }
-               if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-                    return false;
-               }
-               if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-                    return false;
-               }
-          }
-     </script>
-     <script src="src/app.js"></script>
-     <script
-          form_worker_url="https://linuxguy312.contactform-d0b.workers.dev/"
-          src="/contactform/contact-form.js"
-          error_text=""
-          success_text=""
-          disable_waittime="true"
-          id="contactform">
-     </script>
 </body>
 </html>
