--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
      <script src="https://kit.fontawesome.com/c9a9fd0877.js" crossorigin="anonymous"></script>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Rahul Kumar's Website | Founder of Intangible Network Official, Web & Bot Developer.">
+     <meta name="description" content="Rahul Kumar | Founder of Intangible Network Official, Web & Bot Developer.">
      <meta itemprop="name" content="Rahul Kumar's Website">
-     <meta itemprop="description" content="Rahul Kumar's Website | Founder of Intangible Network Official, Web & Bot Developer.">
+     <meta itemprop="description" content="Rahul Kumar | Founder of Intangible Network Official, Web & Bot Developer.">
      <meta itemprop="image" content="https://envs.sh/FFh.jpg">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <meta content="Rahul Kumar's Website" property="og:site_name">
      <meta property="og:type" content="website">
-     <meta content="https://intangible.network" property="og:url">
+     <meta content="https://legendcoder90.github.io/" property="og:url">
      <meta content="Rahul Kumar (@THE NOOB RAHUL)" property="og:title">
      <meta content="https://envs.sh/FFh.jpg" property="og:image">
-     <meta content="Rahul Kumar's Website | Founder of Intangible Network Official, Web & Bot Developer." property="og:description">
-</head><body id="body" class="dark" oncontextmenu="return false">
+     <meta content="Rahul Kumar | Founder of Intangible Network Official, Web & Bot Developer." property="og:description">
+</head><body id="body" class="animated-theme" oncontextmenu="return false" style="background-color: #1a1a2e; color: #e0e0e0;">
      <div class="loader" id="loader">
           <h1 data-value="THE NOOB RAHUL" id="loader-text">Click me</h1>
      </div>
@@ -51,16 +51,13 @@
                           <div class="center"></div>
                      </div>
                 </label>
-                <a href="mailto:legendcoder90@gmail.com" class="mail">
-                     <i class="far fa-envelope"></i>
-                </a>
                 <div class="main">
                      <div class="image">
                           <div class="hover">
-                               <i class="fas fa-camera fa-2x"></i>
+                               <i class="fas fa-code fa-2x"></i>
                           </div>
                      </div>
-                     <h3 class="name">Rahul Kumar</h3>
+                     <h3 class="name">𝕽𝖆𝖍𝖚𝖑 𝕶𝖚𝖒𝖆𝖗</h3>
                      <h3 class="sub-name">@THE NOOB RAHUL</h3>
                 </div>
            </div>
@@ -68,28 +65,29 @@
                 <div class="left">
                      <div class="about-container">
                           <h3 class="title">About</h3>
-                          <p class="text">~ Founder of <a class='text' style="text-decoration: none" href="https://intangible.network">Intangible Network Official</a> ~</p>
-                          <p class="text">~ Web & Bot Developer ~</p>
-</html>
-                          <p class="text">• AI | Networking | Python | JavaScript •</p>
+                          <p class="text">~ Founder of Intangible Network Official ~</p>
+                          <p class="text">~ Web & Bot Developer ~ AI Enthusiast ~</p>
+                          <p class="text">• Python | JavaScript | AI & Networking •</p>
                      </div>
-                     <div class="icons-container">
+<div class="icons-container">
+                          <a href="mailto:legendcoder90@gmail.com" class="icon">
+                               <i class="far fa-envelope"></i>
+                          </a>
                           <a href="https://instagram.com/the_noob_rahul" class="icon">
                                <i class="fab fa-instagram"></i>
                           </a>
                      </div>
                      <div class="buttons-wrap">
                           <div class="follow-wrap">
-                               <a href="https://instagram.com/the_noob_rahul" class="follow">Follow</a>
+                               <a href="mailto:legendcoder90@gmail.com" class="follow">Email Me</a>
                           </div>
                           <div class="share-wrap">
-                               <a href="mailto:legendcoder90@gmail.com" class="share">Contact</a>
+                               <a href="https://instagram.com/the_noob_rahul" class="share">Instagram</a>
                           </div>
                      </div>
                 </div>
            </div>
       </div>
- </div>
  </div>
 
  <script>
