--- a/index.html
+++ b/index.html
@@ -1,115 +1,40 @@
 <!DOCTYPE html><html lang="en">
 <head>
-     <title>Rahul Kumar (@THE NOOB RAHUL)</title>
-     <link rel="stylesheet" href="src/style.css">
-     <link rel="icon" href="https://envs.sh/FFh.jpg" type="image/x-icon">
-     <link rel='stylesheet' href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
-     <script src="https://kit.fontawesome.com/c9a9fd0877.js" crossorigin="anonymous"></script>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Rahul Kumar | Founder of Intangible Network Official, Web & Bot Developer.">
-     <meta itemprop="name" content="Rahul Kumar's Website">
-     <meta itemprop="description" content="Rahul Kumar | Founder of Intangible Network Official, Web & Bot Developer.">
-     <meta itemprop="image" content="https://envs.sh/FFh.jpg">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <meta content="Rahul Kumar's Website" property="og:site_name">
-     <meta property="og:type" content="website">
-     <meta content="https://legendcoder90.github.io/" property="og:url">
-     <meta content="Rahul Kumar (@THE NOOB RAHUL)" property="og:title">
-     <meta content="https://envs.sh/FFh.jpg" property="og:image">
-     <meta content="Rahul Kumar | Founder of Intangible Network Official, Web & Bot Developer." property="og:description">
-</head><body id="body" class="animated-theme" oncontextmenu="return false" style="background-color: #1a1a2e; color: #e0e0e0;">
-     <div class="loader" id="loader">
-          <h1 data-value="THE NOOB RAHUL" id="loader-text">Click me</h1>
-     </div>
-     <div id="particles-js"></div>
-     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-     <div class="wrapper">
-          <div class="toggle">
-               <input class="toggle-input" type="checkbox" />
-               <div class="toggle-bg"></div>
-               <div class="toggle-switch">
-                    <div class="toggle-switch-figure"></div>
-                    <div class="toggle-switch-figureAlt"></div>
-               </div>
-          </div>
-     </div><div class="modal">
-      <img src="https://envs.sh/FFh.jpg" alt="Rahul Kumar">
-      <div class="close"></div>
- </div>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Intangible Network</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>Welcome to Intangible Network</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header><section id="about">
+    <h2>About Us</h2>
+    <p>Intangible Network is a futuristic platform connecting businesses, technology, and AI-powered networking.</p>
+</section>
 
- <div id="container" class="container">
-      <input type="checkbox" name="" id="check">
-      <div class="card">
-           <div class="sidebar" id="sidebar">
-                <a class="active" href="mailto:legendcoder90@gmail.com">Gmail</a>
-                <a class="active" href="https://instagram.com/the_noob_rahul" target="_blank">Instagram</a>
-           </div>
-           <div class="header">
-                <label for="check" class="checkbtn" id="chkbtn">
-                     <div class="hamburger-menu">
-                          <div class="center"></div>
-                     </div>
-                </label>
-                <div class="main">
-                     <div class="image">
-                          <div class="hover">
-                               <i class="fas fa-code fa-2x"></i>
-                          </div>
-                     </div>
-                     <h3 class="name">𝕽𝖆𝖍𝖚𝖑 𝕶𝖚𝖒𝖆𝖗</h3>
-                     <h3 class="sub-name">@THE NOOB RAHUL</h3>
-                </div>
-           </div>
-           <div class="content">
-                <div class="left">
-                     <div class="about-container">
-                          <h3 class="title">About</h3>
-                          <p class="text">~ Founder of Intangible Network Official ~</p>
-                          <p class="text">~ Web & Bot Developer ~ AI Enthusiast ~</p>
-                          <p class="text">• Python | JavaScript | AI & Networking •</p>
-                     </div>
-<div class="icons-container">
-                          <a href="mailto:legendcoder90@gmail.com" class="icon">
-                               <i class="far fa-envelope"></i>
-                          </a>
-                          <a href="https://instagram.com/the_noob_rahul" class="icon">
-                               <i class="fab fa-instagram"></i>
-                          </a>
-                     </div>
-                     <div class="buttons-wrap">
-                          <div class="follow-wrap">
-                               <a href="mailto:legendcoder90@gmail.com" class="follow">Email Me</a>
-                          </div>
-                          <div class="share-wrap">
-                               <a href="https://instagram.com/the_noob_rahul" class="share">Instagram</a>
-                          </div>
-                     </div>
-                </div>
-           </div>
-      </div>
- </div>
+<section id="services">
+    <h2>Our Services</h2>
+    <p>We offer AI-driven solutions for business networking, telecom, and smart connections.</p>
+</section>
 
- <script>
-      document.onkeydown = function (e) {
-           if (event.keyCode == 123) {
-                return false;
-           }
-           if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-                return false;
-           }
-           if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-                return false;
-           }
-           if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-                return false;
-           }
-           if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-                return false;
-           }
-      }
- </script>
- <script src="src/app.js"></script>
+<section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: legendcoder90@gmail.com</p>
+</section>
+
+<script src="script.js"></script>
 
 </body>
 </html>
+ 
