--- a/index.html
+++ b/index.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Next-Level Webpage</title>
-    
-    <!-- Link Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    
-    <!-- Link External CSS -->
+    <title>Rahul Kumar | Intangible Network Official</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-    <header class="hero">
-        <h1>Welcome to the Future</h1>
-        <p>Experience innovation like never before</p>
-        <button class="explore-btn">Explore More</button>
+    <header>
+        <h1>Rahul Kumar</h1>
+        <h2>Founder of Intangible Network Official</h2>
     </header>
-
-    <section class="content">
-        <h2>Why Choose Us?</h2>
-        <p>We blend cutting-edge technology with stunning UI animations to create a breathtaking web experience.</p>
+    <section class="contact-box">
+        <h3>Contact Information</h3>
+        <p><i class="fas fa-envelope"></i> Email: legendcoder90@gmail.com</p>
+        <p><i class="fab fa-instagram"></i> Instagram: <a href="https://instagram.com/the_noob_rahul/" target="_blank">the_noob_rahul</a></p>
+        <p><i class="fas fa-globe"></i> Website: <a href="https://github.com/UnknownCriteria" target="_blank">GitHub</a></p>
     </section>
-
-    <!-- Include JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
