--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rahul Kumar | Intangible Network Official</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <title>Rahul Kumar - Intangible Network Official</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Rahul Kumar</h1>
-        <h2>Founder of Intangible Network Official</h2>
-    </header>
-    <section class="contact-box">
-        <h3>Contact Information</h3>
-        <p><i class="fas fa-envelope"></i> Email: legendcoder90@gmail.com</p>
-        <p><i class="fab fa-instagram"></i> Instagram: <a href="https://instagram.com/the_noob_rahul/" target="_blank">the_noob_rahul</a></p>
-        <p><i class="fas fa-globe"></i> Website: <a href="https://github.com/UnknownCriteria" target="_blank">GitHub</a></p>
-    </section>
+
+    <div id="welcome-screen">
+        <h1>Welcome</h1>
+        <p>Click anywhere to continue</p>
+    </div>
+
+    <main id="main-content" class="hidden">
+        <header>
+            <h1>Rahul Kumar</h1>
+            <h2>Founder of Intangible Network Official</h2>
+        </header>
+
+        <section id="info-box">
+            <p><strong>Network:</strong> Intangible Network Official</p>
+            <p><strong>Email:</strong> legendcoder90@gmail.com</p>
+            <p><strong>Instagram:</strong> <a href="https://instagram.com/the_noob_rahul/" target="_blank">@the_noob_rahul</a></p>
+        </section>
+
+        <footer>
+            <p>© 2025 Rahul Kumar | Intangible Network Official</p>
+        </footer>
+    </main>
+
 </body>
 </html>
