--- a/index.html
+++ b/index.html
@@ -1,35 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intangible Network Official - Rahul Kumar</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/YOUR-FONT-AWESOME-CDN.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Intangible Network Official</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/animations.css">
+  <!-- Font Awesome for Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+  <!-- Starry Background -->
+  <div class="stars"></div>
 
-    <!-- Welcome Screen -->
-    <div id="welcome-screen" onclick="nextStep()">
-        <span id="welcome-text">Welcome</span>
-    </div>
+  <!-- 3-Click Welcome Screen -->
+  <div id="welcome-screen" class="welcome-screen">
+    <img src="assets/images/1000065254.webp" alt="Intangible Network Official Logo" class="logo">
+    <h1>Welcome to Intangible Network</h1>
+    <button id="welcome-button">Click to Enter</button>
+  </div>
 
-    <!-- Main Content -->
-    <div id="main-content" class="hidden">
-        <div class="header">Intangible Network Official</div>
+  <!-- Main Content -->
+  <div id="main-content" class="hidden">
+    <header>
+      <img src="assets/images/1000065254.webp" alt="Intangible Network Official Logo" class="logo">
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <button id="theme-toggle">Dark Mode</button>
+      </nav>
+    </header>
 
-        <!-- Info Boxes -->
-        <div class="box">Hello! I'm <b>Rahul Kumar</b>, founder of Intangible Network Official.</div>
-        <div class="box">We specialize in AI-powered networking & smart connections.</div>
-        <div class="box">Explore our innovations in computer networks, social networks, and telecom.</div>
+    <section id="hero">
+      <h1>Intangible Network Official</h1>
+      <p>Innovating the Future</p>
+    </section>
 
-        <!-- Contact Icons -->
-        <div class="contact-icons">
-            <a href="mailto:legendcoder90@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-            <a href="https://instagram.com/the_noob_rahul/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://github.com/UnknownCriteria" target="_blank"><i class="fab fa-github"></i></a>
-        </div>
-    </div>
+    <section id="about">
+      <h2>About Us</h2>
+      <p>Welcome to Intangible Network, founded by Rahul Kumar. We are dedicated to...</p>
+    </section>
+
+    <section id="services">
+      <h2>Our Services</h2>
+      <p>We offer cutting-edge solutions in...</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+      <div class="social-links">
+        <a href="mailto:legendcoder90@gmail.com" class="social-icon">
+          <i class="fas fa-envelope"></i> legendcoder90@gmail.com
+        </a>
+        <a href="https://instagram.com/the_noob_rahul/" target="_blank" class="social-icon">
+          <i class="fab fa-instagram"></i> @the_noob_rahul
+        </a>
+      </div>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 Intangible Network Official. All rights reserved.</p>
+    </footer>
+  </div>
+
+  <script src="scripts/script.js"></script>
+</body>
+</html>
 
     <script src="script.js"></script>
 
