--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <title>Eren (@WH0907)</title>
+     <title>RAHUL KUMAR</title>
      <link rel="stylesheet" href="src/style.css">
-     <link rel="icon" href="https://vectorified.com/images/attack-on-titan-icon-31.png" type="image/x-icon">
+     <link rel="icon" href="https://envs.sh/FNE.ico" type="image/x-icon">
      <link rel='stylesheet' href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
      <script src="https://kit.fontawesome.com/c9a9fd0877.js" crossorigin="anonymous"></script>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Eren's Website | One of the first web development projects by Eren.">
-     <meta itemprop="name" content="Eren's Website">
-     <meta itemprop="description" content="Eren's Website | One of the first web development projects by Eren.">
-     <meta itemprop="image" content="https://i.ibb.co/9tFYscQ/ErenPFP.webp">
+     <meta name="description" content="Powered By INTANGIBLE NETWORK OFFICIAL">
+     <meta itemprop="name" content="Rahul's Website">
+     <meta itemprop="description" content="Powered By INTANGIBLE NETWORK OFFICIAL.">
+     <meta itemprop="image" content="https://envs.sh/FFh.jpg">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <meta content="Eren's Website" property="og:site_name">
      <meta property="og:type" content="website">
-     <meta content="https://linuxguy312.github.io/" property="og:url">
-     <meta content="Eren (@WH0907)" property="og:title">
-     <meta content="https://i.ibb.co/9tFYscQ/ErenPFP.webp" property="og:image">
-     <meta content="Eren's Website | One of the first web development projects by Eren." property="og:description">
+     <meta content="https://unknowncriteria.github.io/" property="og:url">
+     <meta content="RAHUL KUMAR" property="og:title">
+     <meta content="https://envs.sh/FFh.jpg" property="og:image">
+     <meta content="Powered By INTANGIBLE NETWORK OFFICIAL." property="og:description">
 </head>
 
 <body id="body" class="dark" oncontextmenu="return false">
      <div class="loader" id="loader">
-          <h1 data-value="LinuxGuy312" id="loader-text">Click me</h1>
+          <h1 data-value="LinuxGuy312" id="loader-text">TOUCH ME</h1>
      </div>
      <div id="particles-js"></div>
      <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -39,7 +39,7 @@
      </div>
 
      <div class="modal">
-          <img src="https://i.ibb.co/Hnvn01C/WH.webp" alt="Eren">
+          <img src="https://envs.sh/FFh.jpg" alt="RAHUL">
           <div class="close"></div>
      </div>
 
@@ -47,10 +47,8 @@
           <input type="checkbox" name="" id="check">
           <div class="card">
                <div class="sidebar" id="sidebar">
-                    <a class="active" href="https://github.com/LinuxGuy312" target="_blank">Github</a>
-                    <a class="active" href="https://WH0907.t.me" target="_blank">Telegram</a>
-                    <a class="active" href="https://instagram.com/hamayoshikamado" target="_blank">Instagram</a>
-                    <a class="active" href="https://yoshitsubot.t.me?start=web" target="_blank">My TG Bot</a>
+                    <a class="active" href="https://instagram.com/the_noob_rahul" target="_blank">Instagram</a>
+                    <a class="active" href="thenoobrahul@outlook.com" target="_blank">Outlook</a>
                </div>
                <div class="header">
                     <label for="check" class="checkbtn" id="chkbtn">
@@ -58,7 +56,7 @@
                               <div class="center"></div>
                          </div>
                     </label>
-                    <a href="mailto:linuxguy312@segfault.net" class="mail">
+                    <a href="mailto:thenoobrahul@outlook.com" class="mail">
                          <i class="far fa-envelope"></i>
                     </a>
                     <div class="main">
@@ -67,8 +65,8 @@
                                    <i class="fas fa-camera fa-2x"></i>
                               </div>
                          </div>
-                         <h3 class="name">𝔼𝕣𝕖𝕟</h3>
-                         <h3 class="sub-name">@WH0907</h3>
+                         <h3 class="name">RAHUL</h3>
+                         <h3 class="sub-name">KUMAR</h3>
                     </div>
                </div>
 
@@ -76,27 +74,21 @@
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">~ Telegram Bot Dev ~ <a class='text' style="text-decoration: none" href="https://YoshitsuBot.t.me?start=web">@YoshitsuBot</a> ~</p>
-                              <p class="text">~ Android Dev ~ Kernel Dev ~</p>
-                              <p class="text">• Python | C++ | JavaScript •</p>
+                              <p class="text">~ Bot & Web Dev ~ <a class='text' style="text-decoration: none" href="https://instagram.com/the_noob_rahul/">@the_noob_rahul</a> ~</p>
+                              <p class="text">~ AuToNoMoUs ~ CoMbAtAnT ~</p>
                          </div>
                          <div class="icons-container">
-                              <a href="https://github.com/LinuxGuy312" class="icon">
-                                   <i class="fab fa-github"></i>
-                              </a>
-                              <a href="https://telegram.dog/WH0907" class="icon">
-                                   <i class="fab fa-telegram"></i>
-                              </a>
-                              <a href="https://instagram.com/hamayoshikamado" class="icon">
+                              
+                              <a href="https://instagram.com/the_noob_rahul" class="icon">
                                    <i class="fab fa-instagram"></i>
                               </a>
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
-                                   <a href="https://github.com/LinuxGuy312" class="follow">Follow</a>
+                                   <a href="htttps://instagram.com/the_noob_rahul" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog/WH0907" class="share">Contact</a>
+                                   <a href="htttps://instagram.com/the_noob_rahul" class="share">Contact</a>
                               </div>
                          </div>
                     </div>
@@ -126,7 +118,7 @@
      </script>
      <script src="src/app.js"></script>
      <script
-          form_worker_url="https://linuxguy312.contactform-d0b.workers.dev/"
+          form_worker_url="https://unknowncriteria.contactform-d0b.workers.dev/"
           src="/contactform/contact-form.js"
           error_text=""
           success_text=""
