--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                                    <i class="fas fa-camera fa-2x"></i>
                               </div>
                          </div>
-                         <h3 class="name">RAHUL</h3>
-                         <h3 class="sub-name">KUMAR</h3>
+                         <h3 class="name">Rahul Kumar</h3>
+                         <h3 class="sub-name">ONE MAN ARMY</h3>
                     </div>
                </div>
 
