--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="card">
                <div class="sidebar" id="sidebar">
                     <a class="active" href="https://instagram.com/the_noob_rahul" target="_blank">Instagram</a>
-                    <a class="active" href="thenoobrahul@outlook.com" target="_blank">Outlook</a>
+                    <a class="active" href="mailto:thenoobrahul@outlook.com" target="_blank">Outlook</a> <!-- Corrected link -->
                </div>
                <div class="header">
                     <label for="check" class="checkbtn" id="chkbtn">
@@ -78,23 +78,21 @@
                               <p class="text">~ AuToNoMoUs ~ CoMbAtAnT ~</p>
                          </div>
                          <div class="icons-container">
-                              
                               <a href="https://instagram.com/the_noob_rahul" class="icon">
                                    <i class="fab fa-instagram"></i>
                               </a>
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
-                                   <a href="htttps://instagram.com/the_noob_rahul" class="follow">Follow</a>
+                                   <a href="https://instagram.com/the_noob_rahul" class="follow">Follow</a> <!-- Corrected link -->
                               </div>
                               <div class="share-wrap">
-                                   <a href="htttps://instagram.com/the_noob_rahul" class="share">Contact</a>
+                                   <a href="https://instagram.com/the_noob_rahul" class="share">Contact</a> <!-- Corrected link -->
                               </div>
                          </div>
                     </div>
                </div>
           </div>
-     </div>
      </div>
 
      <script>
