--- a/index.html
+++ b/index.html
@@ -1,127 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <title>RAHUL KUMAR</title>
-     <link rel="stylesheet" href="src/style.css">
-     <link rel="icon" href="https://envs.sh/FNE.ico" type="image/x-icon">
-     <link rel='stylesheet' href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
-     <script src="https://kit.fontawesome.com/c9a9fd0877.js" crossorigin="anonymous"></script>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Powered By INTANGIBLE NETWORK OFFICIAL">
-     <meta itemprop="name" content="Rahul's Website">
-     <meta itemprop="description" content="Powered By INTANGIBLE NETWORK OFFICIAL.">
-     <meta itemprop="image" content="https://envs.sh/FFh.jpg">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <meta content="Eren's Website" property="og:site_name">
-     <meta property="og:type" content="website">
-     <meta content="https://unknowncriteria.github.io/" property="og:url">
-     <meta content="RAHUL KUMAR" property="og:title">
-     <meta content="https://envs.sh/FFh.jpg" property="og:image">
-     <meta content="Powered By INTANGIBLE NETWORK OFFICIAL." property="og:description">
+    <title>RAHUL KUMAR</title>
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="icon" href="https://envs.sh/FNE.ico" type="image/x-icon">
+    <link rel='stylesheet' href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
+    <script src="https://kit.fontawesome.com/c9a9fd0877.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Powered By INTANGIBLE NETWORK OFFICIAL">
+    <meta itemprop="name" content="Rahul's Website">
+    <meta itemprop="description" content="Powered By INTANGIBLE NETWORK OFFICIAL.">
+    <meta itemprop="image" content="https://envs.sh/FFh.jpg">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="Eren's Website" property="og:site_name">
+    <meta property="og:type" content="website">
+    <meta content="https://unknowncriteria.github.io/" property="og:url">
+    <meta content="RAHUL KUMAR" property="og:title">
+    <meta content="https://envs.sh/FFh.jpg" property="og:image">
+    <meta content="Powered By INTANGIBLE NETWORK OFFICIAL." property="og:description">
 </head>
 
 <body id="body" class="dark" oncontextmenu="return false">
-     <div class="loader" id="loader">
-          <h1 data-value="INTANGIBLE NETWORK" id="loader-text">TOUCH ME</h1>
-     </div>
-     <div id="particles-js"></div>
-     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-     <div class="wrapper">
-          <div class="toggle">
-               <input class="toggle-input" type="checkbox" />
-               <div class="toggle-bg"></div>
-               <div class="toggle-switch">
-                    <div class="toggle-switch-figure"></div>
-                    <div class="toggle-switch-figureAlt"></div>
-               </div>
-          </div>
-     </div>
+    <div class="loader" id="loader">
+        <h1 data-value="INTANGIBLE NETWORK" id="loader-text">TOUCH ME</h1>
+    </div>
+    <div id="particles-js"></div>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <div class="wrapper">
+        <div class="toggle">
+            <input class="toggle-input" type="checkbox" />
+            <div class="toggle-bg"></div>
+            <div class="toggle-switch">
+                <div class="toggle-switch-figure"></div>
+                <div class="toggle-switch-figureAlt"></div>
+            </div>
+        </div>
+    </div>
 
-     <div class="modal">
-          <img src="https://envs.sh/FFh.jpg" alt="RAHUL">
-          <div class="close"></div>
-     </div>
+    <div class="modal">
+        <img src="https://envs.sh/FFh.jpg" alt="RAHUL">
+        <div class="close"></div>
+    </div>
 
-     <div id="container" class="container">
-          <input type="checkbox" name="" id="check">
-          <div class="card">
-               <div class="sidebar" id="sidebar">
-                    <a class="active" href="https://instagram.com/the_noob_rahul" target="_blank">Instagram</a>
-                    <a class="active" href="mailto:thenoobrahul@outlook.com" target="_blank">Outlook</a> <!-- Corrected link -->
-               </div>
-               <div class="header">
-                    <label for="check" class="checkbtn" id="chkbtn">
-                         <div class="hamburger-menu">
-                              <div class="center"></div>
-                         </div>
-                    </label>
-                    <a href="mailto:thenoobrahul@outlook.com" class="mail">
-                         <i class="far fa-envelope"></i>
-                    </a>
-                    <div class="main">
-                         <div class="image">
-                              <div class="hover">
-                                   <i class="fas fa-camera fa-2x"></i>
-                              </div>
-                         </div>
-                         <h3 class="name">Rahul Kumar</h3>
-                         <h3 class="sub-name">ONE MAN ARMY</h3>
+    <div id="container" class="container">
+        <input type="checkbox" name="" id="check">
+        <div class="card">
+            <div class="sidebar" id="sidebar">
+                <a class="active" href="https://instagram.com/the_noob_rahul" target="_blank">Instagram</a>
+                <a class="active" href="mailto:thenoobrahul@outlook.com" target="_blank">Outlook</a>
+            </div>
+            <div class="header">
+                <label for="check" class="checkbtn" id="chkbtn">
+                    <div class="hamburger-menu">
+                        <div class="center"></div>
                     </div>
-               </div>
-
-               <div class="content">
-                    <div class="left">
-                         <div class="about-container">
-                              <h3 class="title">About</h3>
-                              <p class="text">~ Bot & Web Dev ~ <a class='text' style="text-decoration: none" href="https://instagram.com/the_noob_rahul/">@the_noob_rahul</a> ~</p>
-                              <p class="text">~ AuToNoMoUs ~ CoMbAtAnT ~</p>
-                         </div>
-                         <div class="icons-container">
-                              <a href="https://instagram.com/the_noob_rahul" class="icon">
-                                   <i class="fab fa-instagram"></i>
-                              </a>
-                         </div>
-                         <div class="buttons-wrap">
-                              <div class="follow-wrap">
-                                   <a href="https://instagram.com/the_noob_rahul" class="follow">Follow</a> <!-- Corrected link -->
-                              </div>
-                              <div class="share-wrap">
-                                   <a href="https://instagram.com/the_noob_rahul" class="share">Contact</a> <!-- Corrected link -->
-                              </div>
-                         </div>
+                </label>
+                <a href="mailto:thenoobrahul@outlook.com" class="mail">
+                    <i class="far fa-envelope"></i>
+                </a>
+                <div class="main">
+                    <div class="image">
+                        <div class="hover">
+                            <i class="fas fa-camera fa-2x"></i>
+                        </div>
                     </div>
-               </div>
-          </div>
-     </div>
+                    <h3 class="name">Rahul Kumar</h3>
+                    <h3 class="sub-name">ONE MAN ARMY</h3>
+                </div>
+            </div>
 
-     <script>
-          document.onkeydown = function (e) {
-               if (event.keyCode == 123) {
-                    return false;
-               }
-               if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-                    return false;
-               }
-               if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-                    return false;
-               }
-               if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-                    return false;
-               }
-               if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-                    return false;
-               }
-          }
-     </script>
-     <script src="src/app.js"></script>
-     <script
-          form_worker_url="https://unknowncriteria.contactform-d0b.workers.dev/"
-          src="/contactform/contact-form.js"
-          error_text=""
-          success_text=""
-          disable_waittime="true"
-          id="contactform">
-     </script>
+            <div class="content">
+                <div class="left">
+                    <div class="about-container">
+                        <h3 class="title">About</h3>
+                        <p class="text">~ Bot & Web Dev ~ <a class='text' style="text-decoration: none" href="https://instagram.com/the_noob_rahul/">@the_noob_rahul</a> ~</p>
+                        <p class="text">~ AuToNoMoUs ~ CoMbAtAnT ~</p>
+                    </div>
+                                       <div class="icons-container">
+                        <a href="https://instagram.com/the_noob_rahul" class="icon">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                    <div class="buttons-wrap">
+                        <div class="follow-wrap">
+                            <a href="https://instagram.com/the_noob_rahul" class="follow">Follow</a>
+                        </div>
+                        <div class="share-wrap">
+                            <a href="https://instagram.com/the_noob_rahul" class="share">Contact</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.onkeydown = function (e) {
+            if (event.keyCode == 123) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+                return false;
+            }
+        }
+    </script>
+    <script src="src/app.js"></script>
+    <script
+        form_worker_url="https://unknowncriteria.contactform-d0b.workers.dev/"
+        src="/contactform/contact-form.js"
+        error_text=""
+        success_text=""
+        disable_waittime="true"
+        id="contactform">
+    </script>
 </body>
 </html>
