--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <h3 class="name">Rahul Kumar</h3>
-                    <h3 class="sub-name">ONE MAN ARMY</h3>
+                    <h4 class="name">AuToNoMoUs CoMbAtAnT</h4>
                 </div>
             </div>
 
@@ -74,7 +74,7 @@
                 <div class="left">
                     <div class="about-container">
                         <h3 class="title">About</h3>
-                        <p class="text">~ Bot & Web Dev ~ <a class='text' style="text-decoration: none" href="https://instagram.com/the_noob_rahul/">@the_noob_rahul</a> ~</p>
+                        <p class="text">~ FOUNDER OF INTANGIBLE NETWORK~ <a class='text' style="text-decoration: none" href="https://instagram.com/the_noob_rahul/">@the_noob_rahul</a> ~</p>
                         <p class="text">~ AuToNoMoUs ~ CoMbAtAnT ~</p>
                     </div>
                                        <div class="icons-container">
